add loading scene

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		</script>
 	</head>
 	<body>
+		<div id="load-mask">
+			<p class="jello">加载中...</p>
+		</div>
 		<header id="banner" class="banner d-flex">
 			<div class="top-bottom d-flex">
 				<div class="left">
