title and mobile optimization

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>练习一</title>
+		<title>谢某某的网站</title>
 		<link rel="stylesheet" href="style/style.css">
 		<script>
 
@@ -203,9 +203,6 @@
 				</div>
 				<div class="right  w-arrow">
 					<ul>
-						<li>	
-						旧有新闻事件的资料整理与跟进，并对相关当事人进行回访
-						</li>
 						<li>
 						部分事件线索真假的核实并对事件总结归档
 						</li>
@@ -213,7 +210,7 @@
 						配合记者老师的工作对采访材料进行整理归纳
 						</li>
 						<li>
-						曾带领实习团队完成对五一劳模特刊的策划与稿件撰写	
+						曾带领团队完成对五一劳模特刊的策划与稿件撰写	
 						</li>
 					</ul>
 				</div>
@@ -225,13 +222,10 @@
 						从海量文字中筛选热点新闻事件的相关资料汇总成文
 						</li>
 						<li>
-						对已有相关新闻稿件的错误进行甄别判断与修正
-						</li>
-						<li>
 						对突发事件采访跟进并及时撰写新闻稿
 						</li>
 						<li>
-						与搭档摄影师积极沟通双方意图，共同选点拍摄影视资料
+						与搭档摄影师积极沟通，共同选点拍摄
 						</li>
 					</ul>
 				</div>
@@ -248,11 +242,10 @@
 				<div class="right  w-arrow">
 					<ul>
 						<li>
-						在短时间内对采集信息进行准确的迅速的级别分类和推送
+						在短时间内对信息进行准确的迅速的分类和推送
 						</li>
 						<li>
-						了解公司业务进度，准确明晰客户要求及潜在需求，及时调整信息标准
-						</li>
+						了解公司业务进度，准确明晰客户要求及潜在需求
 						<li>
 						适应轮班及连续上班制度，在特殊时期进行值班监测
 						</li>
@@ -263,7 +256,7 @@
 				<div class="left b-arrow">
 					<ul>
 						<li>
-						研究html与css相关概念，并理解盒模型及基本动画原理
+						研究html与css相关概念，并理解盒模型及基本结构
 						</li>
 						<li>
 						阅读多本技术书籍，包括但不局限于javascript
@@ -272,7 +265,7 @@
 						常用js框架的学习了解与使用，但本人是坚定的原生派
 						</li>
 						<li>
-						接触了解AJAX、JSON、XML等高级数据交互相关知识
+						接触了解AJAX、JSON、XML等高级数据交互知识
 						</li>
 					</ul>	
 				</div>
