headpost loadanime font global

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 	</head>
 	<body>
 		<div id="load-mask">
-			<p class="jello">加载中...</p>
+			<p>加载中,请稍后</p>
+			<div>
+				<span class="load-ani"></span>
+				<span class="load-ani"></span>
+				<span class="load-ani"></span>
+				<span class="load-ani"></span>
+			</div>
 		</div>
 		<header id="banner" class="banner d-flex">
 			<div class="top-bottom d-flex">
@@ -24,10 +30,10 @@
 					<p>July</p>
 				</div>
 			</div>
-			<div class="banner-left">
+			<div class="banner-left s-hidden">
 					HUNGRY&nbsp;&nbsp;STAY
 			</div>
-			<div class="banner-right">
+			<div class="banner-right s-hidden">
 					STAY&nbsp;&nbsp;FOOLISH
 			</div>
 			<div class="banner-center">
@@ -38,7 +44,7 @@
 						<p>你好，</p>
 						<p>我叫谢添</p>
 					</div>
-					<div class="title-link">
+					<div>
 						<a href="#my" class="btn-default">关于我</a>
 						<a href="#myExps" class="btn-default">我的作品</a>
 					</div>
@@ -67,10 +73,7 @@
 		<section class="myself" id="my">
 			<div class="bg"></div>
 			<h3 class="s-show">个人简述 Info</h3>
-			<div class="post s-hidden">
-				<h3>个人简述 Info</h3>
-				<div></div>
-			</div>
+			<div class="post s-hidden"></div>
 			<div>
 				<ul>
 					<div>我是</div>
@@ -147,7 +150,7 @@
 			<div class="spec m-hidden">
 				<h3>
 					作品列表
-					<P>List of Exps</P>
+					<P>Projects</P>
 				</h3>
 				<p>即使缺乏灵感的光粒，也要在沙滩上留下自己的脚脚(点击获取详情)</p>
 				<a href="#" class="btn-dark">更新中</a>
@@ -204,13 +207,10 @@
 				<div class="right  w-arrow">
 					<ul>
 						<li>
-						部分事件线索真假的核实并对事件总结归档
+						部分事件真假核实并对事件总结归档
 						</li>
 						<li>
-						配合记者老师的工作对采访材料进行整理归纳
-						</li>
-						<li>
-						曾带领团队完成对五一劳模特刊的策划与稿件撰写	
+						配合记者对采访材料进行整理归纳
 						</li>
 					</ul>
 				</div>
@@ -219,7 +219,7 @@
 				<div class="left b-arrow">
 					<ul>
 						<li>	
-						从海量文字中筛选热点新闻事件的相关资料汇总成文
+						筛选热点新闻事件的相关资料汇总成文
 						</li>
 						<li>
 						对突发事件采访跟进并及时撰写新闻稿
@@ -242,10 +242,10 @@
 				<div class="right  w-arrow">
 					<ul>
 						<li>
-						在短时间内对信息进行准确的迅速的分类和推送
+						在短时间内对信息进行迅速分类和推送
 						</li>
 						<li>
-						了解公司业务进度，准确明晰客户要求及潜在需求
+						了解公司业务，明晰客户要求及潜在需求
 						<li>
 						适应轮班及连续上班制度，在特殊时期进行值班监测
 						</li>
@@ -256,13 +256,13 @@
 				<div class="left b-arrow">
 					<ul>
 						<li>
-						研究html与css相关概念，并理解盒模型及基本结构
+						研究html与css相关概念，理解盒模型及基本结构
 						</li>
 						<li>
 						阅读多本技术书籍，包括但不局限于javascript
-						</li>
+						。涉猎数据结构算法等多个方面</li>
 						<li>
-						常用js框架的学习了解与使用，但本人是坚定的原生派
+						常用js框架，如jQuery\Bootstrap的学习了解与使用，理解其封包原理，但本人是坚定的原生派
 						</li>
 						<li>
 						接触了解AJAX、JSON、XML等高级数据交互知识
